--- a/ex2pt2.qsf
+++ b/ex2pt2.qsf
@@ -79,4 +79,5 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_location_assignment PIN_A10 -to pin_name1
 set_location_assignment PIN_A11 -to pin_name2
 set_global_assignment -name VHDL_FILE digital_clock_top1s.vhd
+set_global_assignment -name VHDL_FILE digital_clocksec.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
